Generate Pelican site

--- a/theme/style.css
+++ b/theme/style.css
@@ -2,6 +2,6 @@ html, body {
   margin: 0;
   border: 0;
   font-size: 90%;
-  background-color: #a9a9a9;
+  background-color: #000000;
   color: #ffffff;
 }
